<resources>
    <string name="app_name">Findme</string>

    <string name="app_menu_profile">PROFILE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_header_user_name">KIM MIN JO</string>

    <string name="menu_nfc_registration">NFC REGISTRATION</string>
    <string name="menu_nfc_read">NFC READ</string>
    <string name="menu_registered_list">REGISTERED LIST</string>
    <string name="menu_loss_report">THE LOSS REPORT</string>
    <string name="menu_acquisition_report">THE ACQUISITION REPORT</string>
    <string name="menu_message">MESSAGE</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="acquisition_area_label">ACQUISITION AREA</string>
    <string name="acqusition_area_hint">Enter the place</string>
    <string name="acquisition_date_label">ACQUISITION DATE</string>
    <string name="acquisition_date_hint">Enter the date (YYYYMMDD)</string>
    <string name="acquisition_item_label">ACQUISITION ITEM</string>
    <string name="menu_profile">PROFILE</string>


</resources>